# server/http.go
@@ -182,38 +182,40 @@ func (s *HTTPd) RegisterSiteHandlers(site site.API) {
 	}
 
 	routes := map[string]route{
-		"buffersoc":               {"POST", "/buffersoc/{value:[0-9.]+}", floatHandler(site.SetBufferSoc, site.GetBufferSoc)},
-		"bufferstartsoc":          {"POST", "/bufferstartsoc/{value:[0-9.]+}", floatHandler(site.SetBufferStartSoc, site.GetBufferStartSoc)},
-		"batterydischargecontrol": {"POST", "/batterydischargecontrol/{value:[01truefalse]+}", boolHandler(site.SetBatteryDischargeControl, site.GetBatteryDischargeControl)},
-		"batterygriddischarge":    {"POST", "/batterygriddischarge/{value:[01truefalse]+}", boolHandler(site.SetBatteryGridDischarge, site.GetBatteryGridDischarge)},
-		"batterysolarcontrol":        {"POST", "/batterysolarcontrol/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarControl, site.GetBatterySolarControl)},
-		"batterycalibrationcharge":   {"POST", "/batterycalibrationcharge/{value:[01truefalse]+}", boolHandler(site.SetBatteryCalibrationCharge, site.GetBatteryCalibrationCharge)},
-		"batterycontroldeadband":  {"POST", "/batterycontroldeadband/{value:[0-9.]+}", floatHandler(site.SetBatteryControlDeadBand, site.GetBatteryControlDeadBand)},
-		"batterysolarpool":        {"POST", "/batterysolarpool/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarPool, site.GetBatterySolarPool)},
-		"batterysolartiering":     {"POST", "/batterysolartiering/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarTiering, site.GetBatterySolarTiering)},
-		"batterysolarsticky":      {"POST", "/batterysolarsticky/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarSticky, site.GetBatterySolarSticky)},
-		"batterysolartapering":    {"POST", "/batterysolartapering/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarTapering, site.GetBatterySolarTapering)},
-		"batterygridcharge":       {"POST", "/batterygridchargelimit/{value:-?[0-9.]+}", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
-		"batterygridchargedelete": {"DELETE", "/batterygridchargelimit", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
-		"batterymode":             {"POST", "/batterymode/{value:[a-z]+}", updateBatteryMode(site)},
-		"batterymodedelete":       {"DELETE", "/batterymode", updateBatteryMode(site)},
-		"prioritysoc":             {"POST", "/prioritysoc/{value:[0-9.]+}", floatHandler(site.SetPrioritySoc, site.GetPrioritySoc)},
-		"residualpower":           {"POST", "/residualpower/{value:-?[0-9.]+}", floatHandler(site.SetResidualPower, site.GetResidualPower)},
-		"gridexportlimit":         {"POST", "/gridexportlimit/{value:[0-9.]+}", floatHandler(site.SetGridExportLimit, site.GetGridExportLimit)},
-		"solaradjusted":           {"POST", "/solaradjusted/{value:[01truefalse]+}", boolHandler(pass(site.SetSolarAdjusted), site.GetSolarAdjusted)},
-		"smartcost":               {"POST", "/smartcostlimit/{value:-?[0-9.]+}", updateSmartCostLimit(site, smartCostLimit)},
-		"smartcostdelete":         {"DELETE", "/smartcostlimit", updateSmartCostLimit(site, smartCostLimit)},
-		"smartfeedin":             {"POST", "/smartfeedinprioritylimit/{value:-?[0-9.]+}", updateSmartCostLimit(site, smartFeedInPriorityLimit)},
-		"smartfeedindelete":       {"DELETE", "/smartfeedinprioritylimit", updateSmartCostLimit(site, smartFeedInPriorityLimit)},
-		"tariff":                  {"GET", "/tariff/{tariff:[a-z]+}", tariffHandler(site)},
-		"sessions":                {"GET", "/sessions", sessionHandler},
-		"updatesession":           {"PUT", "/session/{id:[0-9]+}", updateSessionHandler},
-		"deletesession":           {"DELETE", "/session/{id:[0-9]+}", deleteSessionHandler},
-		"gridsessions":            {"GET", "/gridsessions", gridSessionsHandler},
-		"energyhistory":           {"GET", "/history/energy", energyHistoryHandler},
-		"optimize":                {"POST", "/optimize", callHandler(site.Optimize)},
-		"telemetry2":              {"POST", "/settings/telemetry/{value:[01truefalse]+}", boolHandler(telemetry.Enable, telemetry.Enabled)},
-		"devicecolors":            {"PUT", "/devicecolors", updateDeviceColor(site)},
+		"buffersoc":                {"POST", "/buffersoc/{value:[0-9.]+}", floatHandler(site.SetBufferSoc, site.GetBufferSoc)},
+		"bufferstartsoc":           {"POST", "/bufferstartsoc/{value:[0-9.]+}", floatHandler(site.SetBufferStartSoc, site.GetBufferStartSoc)},
+		"batteryminsoc":            {"POST", "/batteryminsoc/{value:[0-9.]+}", floatHandler(site.SetBatteryMinSoc, site.GetBatteryMinSoc)},
+		"batterymaxsoc":            {"POST", "/batterymaxsoc/{value:[0-9.]+}", floatHandler(site.SetBatteryMaxSoc, site.GetBatteryMaxSoc)},
+		"batterydischargecontrol":  {"POST", "/batterydischargecontrol/{value:[01truefalse]+}", boolHandler(site.SetBatteryDischargeControl, site.GetBatteryDischargeControl)},
+		"batterygriddischarge":     {"POST", "/batterygriddischarge/{value:[01truefalse]+}", boolHandler(site.SetBatteryGridDischarge, site.GetBatteryGridDischarge)},
+		"batterysolarcontrol":      {"POST", "/batterysolarcontrol/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarControl, site.GetBatterySolarControl)},
+		"batterycalibrationcharge": {"POST", "/batterycalibrationcharge/{value:[01truefalse]+}", boolHandler(site.SetBatteryCalibrationCharge, site.GetBatteryCalibrationCharge)},
+		"batterycontroldeadband":   {"POST", "/batterycontroldeadband/{value:[0-9.]+}", floatHandler(site.SetBatteryControlDeadBand, site.GetBatteryControlDeadBand)},
+		"batterysolarpool":         {"POST", "/batterysolarpool/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarPool, site.GetBatterySolarPool)},
+		"batterysolartiering":      {"POST", "/batterysolartiering/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarTiering, site.GetBatterySolarTiering)},
+		"batterysolarsticky":       {"POST", "/batterysolarsticky/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarSticky, site.GetBatterySolarSticky)},
+		"batterysolartapering":     {"POST", "/batterysolartapering/{value:[01truefalse]+}", boolHandler(site.SetBatterySolarTapering, site.GetBatterySolarTapering)},
+		"batterygridcharge":        {"POST", "/batterygridchargelimit/{value:-?[0-9.]+}", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
+		"batterygridchargedelete":  {"DELETE", "/batterygridchargelimit", floatPtrHandler(site.SetBatteryGridChargeLimit, site.GetBatteryGridChargeLimit)},
+		"batterymode":              {"POST", "/batterymode/{value:[a-z]+}", updateBatteryMode(site)},
+		"batterymodedelete":        {"DELETE", "/batterymode", updateBatteryMode(site)},
+		"prioritysoc":              {"POST", "/prioritysoc/{value:[0-9.]+}", floatHandler(site.SetPrioritySoc, site.GetPrioritySoc)},
+		"residualpower":            {"POST", "/residualpower/{value:-?[0-9.]+}", floatHandler(site.SetResidualPower, site.GetResidualPower)},
+		"gridexportlimit":          {"POST", "/gridexportlimit/{value:[0-9.]+}", floatHandler(site.SetGridExportLimit, site.GetGridExportLimit)},
+		"solaradjusted":            {"POST", "/solaradjusted/{value:[01truefalse]+}", boolHandler(pass(site.SetSolarAdjusted), site.GetSolarAdjusted)},
+		"smartcost":                {"POST", "/smartcostlimit/{value:-?[0-9.]+}", updateSmartCostLimit(site, smartCostLimit)},
+		"smartcostdelete":          {"DELETE", "/smartcostlimit", updateSmartCostLimit(site, smartCostLimit)},
+		"smartfeedin":              {"POST", "/smartfeedinprioritylimit/{value:-?[0-9.]+}", updateSmartCostLimit(site, smartFeedInPriorityLimit)},
+		"smartfeedindelete":        {"DELETE", "/smartfeedinprioritylimit", updateSmartCostLimit(site, smartFeedInPriorityLimit)},
+		"tariff":                   {"GET", "/tariff/{tariff:[a-z]+}", tariffHandler(site)},
+		"sessions":                 {"GET", "/sessions", sessionHandler},
+		"updatesession":            {"PUT", "/session/{id:[0-9]+}", updateSessionHandler},
+		"deletesession":            {"DELETE", "/session/{id:[0-9]+}", deleteSessionHandler},
+		"gridsessions":             {"GET", "/gridsessions", gridSessionsHandler},
+		"energyhistory":            {"GET", "/history/energy", energyHistoryHandler},
+		"optimize":                 {"POST", "/optimize", callHandler(site.Optimize)},
+		"telemetry2":               {"POST", "/settings/telemetry/{value:[01truefalse]+}", boolHandler(telemetry.Enable, telemetry.Enabled)},
+		"devicecolors":             {"PUT", "/devicecolors", updateDeviceColor(site)},
 
 		"optimizerchargingstrategy": {"POST", "/optimizerchargingstrategy/{value:[a-z_]+}", stringHandler(site.SetOptimizerChargingStrategy, site.GetOptimizerChargingStrategy)},
 	}
